--- a/index.html
+++ b/index.html
@@ -172,7 +172,75 @@
             </div>           
         </main>
         <footer>
-            
+            <div class="row">
+                <div class="col-33 sx">
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-microphone icon"></i>
+                            <i class="fa-solid fa-angle-up"></i>
+                        </div>
+                        <span>Mute</span>  
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                            <i class="fa-solid fa-angle-up"></i>
+                        </div>
+                        <span>Stop Video</span>
+                    </div>
+                </div>
+                <div class="col-33 center">
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                        </div>
+                        <span>Invite</span>
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                        </div>
+                        <span>Manage Participants</span>
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                        </div>
+                        <span>Polling</span>
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                        </div>
+                        <span>Chat</span>
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                        </div>
+                        <span>Record</span>
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                        </div>
+                        <span>Breakout Rooms</span>
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                        </div>
+                        <span>More</span>
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-video icon"></i>
+                        </div>
+                        <span>Stop Video</span>
+                    </div>
+                </div>
+                <div class="col-33 dx"></div>
+            </div>
         </footer>
     </body>
 </html>
