--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </main>
         <footer>
             <div class="row">
-                <div class="col-33 sx">
+                <div class="col-20">
                     <div class="button-zone">
                         <div class="bottom-button">
                             <i class="fa-solid fa-microphone icon"></i>
@@ -189,57 +189,62 @@
                         <span>Stop Video</span>
                     </div>
                 </div>
-                <div class="col-33 center">
+                <div class="col-60">
                     <div class="button-zone">
                         <div class="bottom-button">
-                            <i class="fa-solid fa-video icon"></i>
+                            <i class="fa-solid fa-user-plus icon"></i>
                         </div>
                         <span>Invite</span>
                     </div>
                     <div class="button-zone">
                         <div class="bottom-button">
-                            <i class="fa-solid fa-video icon"></i>
+                            <i class="fa-solid fa-users icon"></i>
                         </div>
                         <span>Manage Participants</span>
                     </div>
                     <div class="button-zone">
                         <div class="bottom-button">
-                            <i class="fa-solid fa-video icon"></i>
+                            <i class="fa-solid fa-wave-square icon"></i>
                         </div>
                         <span>Polling</span>
                     </div>
                     <div class="button-zone">
                         <div class="bottom-button">
-                            <i class="fa-solid fa-video icon"></i>
+                            <i class="fa-solid fa-share-from-square green icon"></i>
+                            <i class="fa-solid fa-angle-up"></i>
+                        </div>
+                        <span>Share screen</span>
+                    </div>
+                    <div class="button-zone">
+                        <div class="bottom-button">
+                            <i class="fa-solid fa-comment icon"></i>
                         </div>
                         <span>Chat</span>
                     </div>
                     <div class="button-zone">
                         <div class="bottom-button">
-                            <i class="fa-solid fa-video icon"></i>
+                            <i class="fa-solid fa-record-vinyl icon"></i>
                         </div>
                         <span>Record</span>
                     </div>
                     <div class="button-zone">
                         <div class="bottom-button">
-                            <i class="fa-solid fa-video icon"></i>
+                            <i class="fa-solid fa-table-cells-large icon"></i>
                         </div>
                         <span>Breakout Rooms</span>
                     </div>
                     <div class="button-zone">
                         <div class="bottom-button">
-                            <i class="fa-solid fa-video icon"></i>
+                            <i class="fa-solid fa-info icon"></i>
                         </div>
                         <span>More</span>
                     </div>
-                    <div class="button-zone">
-                        <div class="bottom-button">
-                            <i class="fa-solid fa-video icon"></i>
-                        </div>
-                        <span>Stop Video</span>
+                </div>
+                <div class="col-20 dx">
+                    <div class="end">
+                        End meeting
                     </div>
                 </div>
-                <div class="col-33 dx"></div>
             </div>
         </footer>
     </body>
