aggiunta_transizioni_voci_footer

--- a/index.html
+++ b/index.html
@@ -246,6 +246,14 @@
                     </div>
                 </div>
             </div>
+            <div class="row-cover">
+                <div class="col-cover">
+
+                </div>
+                <div class="col-cover-gray">
+
+                </div>
+            </div>
         </footer>
     </body>
 </html>
